added the existing cs files

--- a/Mentoring-App/Mentoring-App/Mentoring-App.csproj
+++ b/Mentoring-App/Mentoring-App/Mentoring-App.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DB\" />
+    <Folder Include="Classes\" />
     <Folder Include="Pages\" />
   </ItemGroup>
 
