--- a/Mentoring-App/Mentoring-App/Mentoring-App.csproj
+++ b/Mentoring-App/Mentoring-App/Mentoring-App.csproj
@@ -9,8 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Classes\" />
     <Folder Include="Pages\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
