--- a/Mentoring-App/Mentoring-App/Mentoring-App.csproj
+++ b/Mentoring-App/Mentoring-App/Mentoring-App.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.0" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
   </ItemGroup>
 
 </Project>
