--- a/Mentoring-App/Mentoring-App/Mentoring-App.csproj
+++ b/Mentoring-App/Mentoring-App/Mentoring-App.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Pages\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
+  </ItemGroup>
+
 </Project>
